# model-transparency

./: CONTRIBUTORS.md  ROADMAP.md  pyproject.toml
docs/: model_signing_format.md
model_signing/: __init__.py  pyproject.toml
src/model_signing/: __init__.py  _cli.py  api.py
