[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "model_signing"
dynamic = ["version"]
description = "A tool for signing and verifying ML models"
readme = "README.md"
license = { file = "../LICENSE" }
authors = [
  { name = "Sigstore Authors", email = "sigstore-dev@googlegroups.com" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  # TODO: trim list of dependencies and add here
  # TODO: optional dependencies for testing, benchmarking
]
requires-python = ">=3.11"
keywords = [
  "machine learning",
  "artificial intelligence",
  "model signing",
  "AI security",
  "ML security",
  "AI supply chain security",
  "ML supply chain security",
]

[project.urls]
Homepage = "https://pypi.org/project/model-signing/"
Issues = "https://github.com/sigstore/model-transparency/issues"
Source = "https://github.com/sigstore/model-transparency"
# TODO: Documentation = "https://sigstore.github.io/model-transparency/"

# TODO: CLI tools should go under project.scripts

[tool.flit.module]
name = ""

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "PLC", "PLE", "SIM", "W"]
ignore = ["B024"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing"]

# TODO: Exclude files from the wheel, we don't want to include tests and testdata
